fixed margins on mobile for .question__btn--large

--- a/src/scss/buttons.scss
+++ b/src/scss/buttons.scss
@@ -63,6 +63,9 @@
         }
     }
 }
+.btn__container--large {
+    margin: 0 auto 4rem;
+}
 
 .btn--play {
     background: $start;
